--- a/c#/GoLMvcFrontEnd/appsettings.json
+++ b/c#/GoLMvcFrontEnd/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "LocalBaseUrl": "https://localhost:44353/"
 }
