--- a/c#/Refactoring.Conway.Services/Refactoring.Conway.Services.csproj
+++ b/c#/Refactoring.Conway.Services/Refactoring.Conway.Services.csproj
@@ -1,13 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Refactoring.Conway.Domain\Refactoring.Conway.Domain.csproj" />
-    <ProjectReference Include="..\Refactoring.Conway.Services\Refactoring.Conway.Services.csproj" />
   </ItemGroup>
 
 </Project>
